ArgoCD/Manifests/Sensorapp/sensor-server-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sensor-app-server
  namespace: sensor-app
  labels:
    app: sensor-app-server
    app.kubernetes.io/component: sensor-app-server
    app.kubernetes.io/instance: sensor-app-server
    app.kubernetes.io/name: sensor-app-server
    app.kubernetes.io/part-of: sensor-app
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-namespace: sensor-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensor-app-server
  template:
    metadata:
      labels:
        app: sensor-app-server
        deployment: sensor-app-server
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: sensor-app
          image: 'quay.io/thason/sensor-app:v6'
          ports:
            - containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: '/healthy'
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
